--- a/app/views/cats/_cat.html.erb
+++ b/app/views/cats/_cat.html.erb
@@ -1,3 +1,5 @@
+<%# 全体を`turbo_frame_tag`で囲う %>
+<%= turbo_frame_tag cat do %>
 <div class="row py-2 border-top">
   <div class="col-4 my-auto">
     <%= cat.name %>
@@ -12,3 +14,4 @@
     </div>
   </div>
 </div>
+<% end %>
