--- a/app/views/cats/_cat.html.erb
+++ b/app/views/cats/_cat.html.erb
@@ -1,4 +1,3 @@
-<%# 全体を`turbo_frame_tag`で囲う %>
 <%= turbo_frame_tag cat do %>
 <div class="row py-2 border-top">
   <div class="col-4 my-auto">
@@ -10,7 +9,7 @@
   <div class="col-4">
     <div class="d-flex justify-content-end">
       <%= link_to "編集", edit_cat_path(cat), class: "btn btn-sm btn-outline-primary me-2" %>
-      <%= button_to "削除", cat, method: :delete, class: "btn btn-sm btn-outline-danger" %>
+      <%= button_to "削除", cat, method: :delete, class: "btn btn-sm btn-outline-danger", form: { data: { turbo_confirm: "本当に削除しますか？" } } %>
     </div>
   </div>
 </div>
